force-app/main/default/objects/TXN_Step__c/TXN_Step__c.object-meta.xml
<CustomObject>
    <label>TXN Step</label>
    <nameField>
        <displayFormat>TXNS-{000000}</displayFormat>
        <label>TXN Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TXN Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>