force-app/main/default/objects/TXN_Step__c/fields/CPU_Time_Used_ms__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time_Used_ms__c</fullName>
    <label>CPU Time Used ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>