force-app/main/default/objects/TXN_Step__c/fields/Duration_ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_ms__c</fullName>
    <label>Duration ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>