force-app/main/default/objects/TXN_Step__c/fields/Error_Class__c.field-meta.xml
<CustomField>
    <fullName>Error_Class__c</fullName>
    <label>Error Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>