force-app/main/default/objects/TXN_Step__c/fields/Error_Line__c.field-meta.xml
<CustomField>
    <fullName>Error_Line__c</fullName>
    <label>Error Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>