force-app/main/default/objects/TXN_Step__c/fields/Step_Key__c.field-meta.xml
<CustomField>
    <fullName>Step_Key__c</fullName>
    <externalId>true</externalId>
    <label>Step Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>