force-app/main/default/objects/TXN_Step__c/fields/TXN_Log__c.field-meta.xml
<CustomField>
    <fullName>TXN_Log__c</fullName>
    <label>TXN Log</label>
    <referenceTo>TXN_Log__c</referenceTo>
    <relationshipLabel>TXN Steps</relationshipLabel>
    <relationshipName>TXN_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>